Fixed File Upload Overlap Issue, Centered Titles for Consistency

--- a/infrastructureinventoryproject/infrastructureinventoryapp/static/style.css
+++ b/infrastructureinventoryproject/infrastructureinventoryapp/static/style.css
@@ -289,6 +289,10 @@ select[id="id_network"], select[id="id_is_virtual_machine"], select[id="id_envir
     font-family: 'Poppins';
 }
 
+#id_file {
+    display:inline-block;
+}
+
 
 
 
